Fix hero spacing

--- a/style.css
+++ b/style.css
@@ -158,17 +158,15 @@ a.button {
 }
 
 .products header {
+  display: flex;
+  flex-flow: column;
+  gap: var(--spacing-100);
   text-align: justify;
 }
 
 .products article {
   padding-block: var(--spacing-300);
 }
-
-/* .products article h3 + p,
-.products .contribution-list {
-  padding-block-start: var(--spacing-200);
-} */
 
 @media (min-width: 50rem) {
   .products header {
@@ -186,6 +184,7 @@ a.button {
 }
 
 .primary-nav {
+  height: 68px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -387,7 +386,6 @@ footer header .button {
 }
 
 .container {
-  padding-inline: max(var(--spacing-100), 5vw);
   min-width: max(400px, 90vw);
   max-width: 9rem;
   margin: 0 auto;
@@ -423,6 +421,10 @@ footer header .button {
 }
 
 @media (min-width: 50em) {
+  .container {
+    padding-inline: max(var(--spacing-100), 5vw);
+  }
+
   .display-md {
     display: block;
   }
